Initial implementation of uaf_00009

--- a/src/UAFWinEd/UAFWinEd_vs2013.vcxproj
+++ b/src/UAFWinEd/UAFWinEd_vs2013.vcxproj
@@ -18,13 +18,13 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v141_xp</PlatformToolset>
     <UseOfMfc>Static</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v141_xp</PlatformToolset>
     <UseOfMfc>Static</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -106,9 +106,7 @@
       <OutputFile>.\Debug/UAFWinEd.bsc</OutputFile>
     </Bscmake>
     <PostBuildEvent>
-      <Command>rem md ..\..\UAFWinEd
-rem copy debug\UAFWinEd.exe ..\..\UAFWinEd\UAFWinEd.exe
-</Command>
+      <Command>copy debug\UAFWinEd.exe C:\Users\Shadow\Downloads\Full_Release_191031\editor\</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
