IOC for uaf_00011

--- a/src/UAFWinEd/UAFWinEd.rc
+++ b/src/UAFWinEd/UAFWinEd.rc
@@ -1252,7 +1252,7 @@ BEGIN
     PUSHBUTTON      "Import Level",IDC_Import,315,130,60,14
 END
 
-IDD_GLOBALDATA DIALOGEX 0, 0, 383, 287
+IDD_GLOBALDATA DIALOGEX 0, 0, 383, 306
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Global Design Data"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -1265,16 +1265,16 @@ BEGIN
     COMBOBOX        IDC_STARTLEVEL,35,95,108,71,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_STARTY,52,113,20,14,ES_NUMBER | WS_GROUP
     EDITTEXT        IDC_STARTTIME,121,114,24,14,ES_NUMBER | WS_GROUP
-    EDITTEXT        IDC_DUNGTIME,13,167,30,12,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_DUNGSEARCHTIME,13,181,30,12,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_WILDTIME,13,195,30,12,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_WILDSEARCHTIME,13,209,30,12,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_DARKENTIMESTART,10,253,30,12,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    EDITTEXT        IDC_DARKENENDTIME,10,267,30,12,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    EDITTEXT        IDC_AUTODARKENAMOUNT,81,238,20,14,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_MINPCS,287,233,20,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_MAXPCS,287,249,20,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Allow Char Create",IDC_ALLOWCHARCREATE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,144,162,72,10
+    EDITTEXT        IDC_DUNGTIME,13,185,30,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_DUNGSEARCHTIME,13,199,30,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_WILDTIME,13,213,30,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_WILDSEARCHTIME,13,227,30,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_DARKENTIMESTART,10,271,30,12,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    EDITTEXT        IDC_DARKENENDTIME,10,285,30,12,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    EDITTEXT        IDC_AUTODARKENAMOUNT,81,256,20,14,ES_RIGHT | ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_MINPCS,287,251,20,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_MAXPCS,287,267,20,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Allow Char Create",IDC_ALLOWCHARCREATE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,144,180,72,10
     PUSHBUTTON      "Viewport Frame",IDC_SELECTFRAME,231,4,70,14,WS_GROUP
     PUSHBUTTON      "Horz Border",IDC_SELECTHBORDER,231,20,70,14,WS_GROUP
     PUSHBUTTON      "Vert Border",IDC_SELECTVBORDER,231,36,70,14,WS_GROUP
@@ -1283,10 +1283,10 @@ BEGIN
     PUSHBUTTON      "Combat Cursor",IDC_SELECTCOMBATCOMMON,231,84,70,14,WS_GROUP
     PUSHBUTTON      "Combat Death",IDC_COMBATDEATH,231,100,70,14
     PUSHBUTTON      "Combat Dying",IDC_COMBATDYING,231,116,70,14
-    PUSHBUTTON      "Font",IDC_FONTSELECT,307,132,70,14
-    PUSHBUTTON      "Icon BG",IDC_SELECTICONBG,307,148,70,14
-    PUSHBUTTON      "Background",IDC_SCREENBG,305,164,70,14
-    PUSHBUTTON      "Mouse Cursor",IDC_MOUSECURSOR,307,180,70,14
+    PUSHBUTTON      "Font",IDC_FONTSELECT,307,150,70,14
+    PUSHBUTTON      "Icon BG",IDC_SELECTICONBG,307,166,70,14
+    PUSHBUTTON      "Background",IDC_SCREENBG,305,182,70,14
+    PUSHBUTTON      "Mouse Cursor",IDC_MOUSECURSOR,307,198,70,14
     PUSHBUTTON      "Starting Equipment",IDC_STARTEQUIP,309,4,70,14,WS_DISABLED
     PUSHBUTTON      "Sounds",IDC_SOUNDS,309,21,70,14
     PUSHBUTTON      "Currency",IDC_CONFIGMONEY,309,38,70,14
@@ -1294,8 +1294,8 @@ BEGIN
     PUSHBUTTON      "Global Attributes",IDC_EDITGLOBALATTRIBUTES,309,72,70,14
     PUSHBUTTON      "Title Screens",IDC_SELECTTITLES,309,89,70,14
     PUSHBUTTON      "'Fix' Spells",IDC_FIXSPELLS,309,106,70,14
-    PUSHBUTTON      "OK",IDOK,326,241,50,14
-    DEFPUSHBUTTON   "Cancel",IDCANCEL,325,260,50,14
+    PUSHBUTTON      "OK",IDOK,326,259,50,14
+    DEFPUSHBUTTON   "Cancel",IDCANCEL,325,278,50,14
     LTEXT           "Design Name",IDC_STATIC,30,7,44,8
     LTEXT           "Starting",IDC_STATIC,15,23,25,8
     CONTROL         "Exp",IDC_STARTEXPTYPE,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,43,18,28,10
@@ -1315,18 +1315,18 @@ BEGIN
     CONTROL         "South",IDC_FACESOUTH,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,80,132,35,10
     CONTROL         "West",IDC_FACEWEST,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,80,142,33,10
     GROUPBOX        "Time Delta Per Party Step (minutes)",IDC_STATIC,7,158,129,68
-    LTEXT           "Dungeon",IDC_STATIC,45,169,30,8
-    LTEXT           "Dungeon Search",IDC_STATIC,45,182,55,8
-    LTEXT           "Wilderness",IDC_STATIC,45,197,36,8
-    LTEXT           "Wilderness Search",IDC_STATIC,45,210,60,8
-    CONTROL         "Auto Darken Viewport",IDC_USEAUTODARKEN,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,10,228,85,10
-    LTEXT           "Auto Darken Amount",IDC_STATIC,12,240,67,8
-    LTEXT           "(0-256, 0=darkest)",IDC_STATIC,102,241,58,8
-    LTEXT           "Start Time",IDC_STATIC,42,255,33,8
-    LTEXT           "Use 24 Hour Format",IDC_STATIC,80,254,64,8
+    LTEXT           "Dungeon",IDC_STATIC,45,187,30,8
+    LTEXT           "Dungeon Search",IDC_STATIC,45,200,55,8
+    LTEXT           "Wilderness",IDC_STATIC,45,215,36,8
+    LTEXT           "Wilderness Search",IDC_STATIC,45,228,60,8
+    CONTROL         "Auto Darken Viewport",IDC_USEAUTODARKEN,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,10,246,85,10
+    LTEXT           "Auto Darken Amount",IDC_STATIC,12,258,67,8
+    LTEXT           "(0-256, 0=darkest)",IDC_STATIC,102,259,58,8
+    LTEXT           "Start Time",IDC_STATIC,42,273,33,8
+    LTEXT           "Use 24 Hour Format",IDC_STATIC,80,272,64,8
     LTEXT           "0 = 12:00 am",IDC_STATIC,94,263,42,8
-    LTEXT           "2359 = 11:59 pm",IDC_STATIC,82,272,54,8
-    LTEXT           "End Time",IDC_STATIC,42,269,31,8
+    LTEXT           "2359 = 11:59 pm",IDC_STATIC,82,291,54,8
+    LTEXT           "End Time",IDC_STATIC,42,290,31,8
     LTEXT           "Viewport Frame",IDC_STATIC,178,7,50,8
     LTEXT           "Viewport Horz Border",IDC_STATIC,160,23,68,8
     LTEXT           "Vewport Vert Border",IDC_STATIC,164,39,64,8
@@ -1335,19 +1335,21 @@ BEGIN
     LTEXT           "Combat Cursor",IDC_STATIC,181,87,47,8
     LTEXT           "Combat Death",IDC_STATIC,182,103,46,8
     LTEXT           "Combat Dying",IDC_STATIC,183,119,45,8
-    LTEXT           "Font",IDC_STATIC,289,135,15,8
-    LTEXT           "Icon Background",IDC_STATIC,247,151,56,8
-    LTEXT           "Screen Background",IDC_STATIC,239,167,64,8
-    LTEXT           "Mouse Cursor",IDC_STATIC,257,183,44,8
-    LTEXT           "Min Number of PCs",IDC_STATIC,220,237,65,8
-    LTEXT           "Max Number of PCs",IDC_STATIC,220,253,64,8
-    PUSHBUTTON      "Credits Screens",IDC_CREDITS,305,196,70,14
-    LTEXT           "Credits Screen",IDC_STATIC,253,199,47,8
-    PUSHBUTTON      "none",IDC_AreaViewArt,305,212,70,14
-    LTEXT           "Area View Art",IDC_STATIC,251,215,44,8
-    EDITTEXT        IDC_MAXPARTY,287,266,20,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Max Party Size",IDC_STATIC,237,269,48,8
-    CONTROL         "Dead at zero HP",IDC_DEADATZEROHP,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,146,175,69,10
+    LTEXT           "Font",IDC_STATIC,289,153,15,8
+    LTEXT           "Icon Background",IDC_STATIC,247,169,56,8
+    LTEXT           "Screen Background",IDC_STATIC,239,185,64,8
+    LTEXT           "Mouse Cursor",IDC_STATIC,257,201,44,8
+    LTEXT           "Min Number of PCs",IDC_STATIC,220,255,65,8
+    LTEXT           "Max Number of PCs",IDC_STATIC,220,271,64,8
+    PUSHBUTTON      "Credits Screens",IDC_CREDITS,305,214,70,14
+    LTEXT           "Credits Screen",IDC_STATIC,253,217,47,8
+    PUSHBUTTON      "none",IDC_AreaViewArt,305,230,70,14
+    LTEXT           "Area View Art",IDC_STATIC,251,233,44,8
+    EDITTEXT        IDC_MAXPARTY,287,285,20,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Max Party Size",IDC_STATIC,235,288,48,8
+    CONTROL         "Dead at zero HP",IDC_DEADATZEROHP,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,146,193,69,10
+    PUSHBUTTON      "CharacterFrame",IDC_SELECTCHARFRAME,232,133,70,14,WS_GROUP
+    LTEXT           "Character Frame",IDC_STATIC,176,135,53,8
 END
 
 IDD_DESIGNLIST DIALOG 0, 0, 390, 169
@@ -4773,7 +4775,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 376
         TOPMARGIN, 7
-        BOTTOMMARGIN, 280
+        BOTTOMMARGIN, 299
     END
 
     IDD_DESIGNLIST, DIALOG
