--- a/src/UAFWinEd/UAFWinEd_vs2013.vcxproj
+++ b/src/UAFWinEd/UAFWinEd_vs2013.vcxproj
@@ -143,7 +143,7 @@
       <AdditionalDependencies>vfw32.lib;amstrmid.lib;winmm.lib;ddraw.lib;dsound.lib;dxguid.lib;cdx.lib;bass.lib;zlibr.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Release/UAFWinEd.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalLibraryDirectories>..\shared;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\shared;%(AdditionalLibraryDirectories);C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\atlmfc\lib\x86;C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\lib\onecore\x86;C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\lib\x86;C:\Program Files (x86)\Windows Kits\10\Lib\10.0.19041.0\um\x86</AdditionalLibraryDirectories>
       <ProgramDatabaseFile>.\Release/UAFWinEd.pdb</ProgramDatabaseFile>
       <GenerateMapFile>true</GenerateMapFile>
       <MapFileName>.\Release/UAFWinEd.map</MapFileName>
