--- a/src/UAFLib/UAFLib.csproj
+++ b/src/UAFLib/UAFLib.csproj
@@ -81,6 +81,10 @@
     <Content Include="js\ABILITY_DATA_TYPE.js" />
     <Content Include="js\ACTIVE_SPELL_LIST.js" />
     <Content Include="js\BASECLASS_LIST.js" />
+    <Content Include="js\DamageComputation.js" />
+    <Content Include="js\DispText.js" />
+    <Content Include="js\GLOBAL_SOUND_DATA.js" />
+    <Content Include="js\MonsterFormType.js" />
     <Content Include="js\MonsterPenaltyType.js" />
     <Content Include="js\FormattedText.js" />
     <Content Include="js\SKILL_COMPUTATION.js" />
